{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 24,
  "lineage": "9e9c19b9-8ec0-740c-b210-23017896a9da",
  "resources": [
    {
      "module": "module.mighty_trousers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f4cb4629342979c",
            "arn": "arn:aws:ec2:ap-northeast-1:410606799197:instance/i-0b24c65c58f6033b9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b24c65c58f6033b9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c6444de1e534b13",
            "private_dns": "ip-10-0-1-158.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e54775589e8f7210",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e59be40a8b657f0e",
            "tags": {
              "Name": "MightyTrousers"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-020a649f9910688bc"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.my_vpc",
            "module.mighty_trousers.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.crazy_foord",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f4cb4629342979c",
            "arn": "arn:aws:ec2:ap-northeast-1:410606799197:instance/i-00d42668488b095b7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d42668488b095b7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09379fa5f598741b7",
            "private_dns": "ip-10-0-1-4.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020ed4ce45be82c38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e59be40a8b657f0e",
            "tags": {
              "Name": "CrazyFoods ip-10-0-1-158.ap-northeast-1.compute.internal"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03559a528828c2111"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.my_vpc",
            "module.crazy_foord.aws_security_group.allow_http",
            "module.mighty_trousers.aws_instance.app-server",
            "module.mighty_trousers.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.mighty_trousers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:410606799197:security-group/sg-020a649f9910688bc",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020a649f9910688bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MightyTrousers allow_http",
            "name_prefix": null,
            "owner_id": "410606799197",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c6c9cc56edd71662"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.crazy_foord",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:410606799197:security-group/sg-03559a528828c2111",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03559a528828c2111",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CrazyFoods ip-10-0-1-158.ap-northeast-1.compute.internal allow_http",
            "name_prefix": null,
            "owner_id": "410606799197",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c6c9cc56edd71662"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.my_vpc",
            "module.mighty_trousers.aws_instance.app-server",
            "module.mighty_trousers.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:410606799197:subnet/subnet-0e59be40a8b657f0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e59be40a8b657f0e",
            "map_public_ip_on_launch": false,
            "owner_id": "410606799197",
            "vpc_id": "vpc-0c6c9cc56edd71662"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:410606799197:vpc/vpc-0c6c9cc56edd71662",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f6451aef9868f37",
            "default_route_table_id": "rtb-0a341bac9228f47bb",
            "default_security_group_id": "sg-0d40e0c85978c929c",
            "dhcp_options_id": "dopt-37d9f350",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c6c9cc56edd71662",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a341bac9228f47bb",
            "owner_id": "410606799197"
          }
        }
      ]
    }
  ]
}